dash_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-serv
spec:
  selector:
    app: dashpod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
