metal_pod_ex.yaml


kind: Service
apiVersion: v1
metadata:
  name: lb-service
spec:
  type: LoadBalancer
  selector:
    app: dashpod
  ports:
  # Default port used by the image
  - port: 80
    targetPort: 80
