service_www.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-front
spec:
  selector:
    app: podapache
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30631
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30632
  type: NodePort
